package pt.org.upskill.domain;

public class SNS {
}
